--- a/data_description.ipynb
+++ b/data_description.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 2.1 Für welches Daten-Feld möchten Sie Vorhersagen treffen können?\n",
     "`- Im Bitcoin Datenset könnte ich zu allen Felder eine Vorhersage treffen.`\n",
-    "`- Mein Ziel ist es aber, eine Vorhersage für die Spalte high und volume eine vorhersage zu treffen.`\n",
+    "`- Mein Ziel ist es aber, eine Vorhersage für die Spalte high und low zu treffen.`\n",
     "`- Denn das sind wahrscheindlich die interesantesten Felder zum Handeln von Bitcoins.`"
    ]
   },
