--- a/model.ipynb
+++ b/model.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -24,9 +24,9 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: scikit-learn in c:\\users\\silvan.stoeckli\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (1.0.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\silvan.stoeckli\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from scikit-learn) (3.1.0)\n",
       "Requirement already satisfied: numpy>=1.14.6 in c:\\users\\silvan.stoeckli\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from scikit-learn) (1.22.3)\n",
       "Requirement already satisfied: scipy>=1.1.0 in c:\\users\\silvan.stoeckli\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from scikit-learn) (1.8.0)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\silvan.stoeckli\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from scikit-learn) (3.1.0)\n",
       "Requirement already satisfied: joblib>=0.11 in c:\\users\\silvan.stoeckli\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from scikit-learn) (1.1.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
@@ -119,7 +119,7 @@
        "4  2021-10-30 02:56:00  61879.33  61925.42  61907.47  61882.28  5.663128"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -223,14 +223,14 @@
        "4  61879.33  61925.42  61907.47  61882.28"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# x = features\n",
-    "X = Bitcoin[[\"low\", \"open\", \"close\"]]\n",
+    "X = Bitcoin[[\"low\", \"high\", \"open\", \"close\"]]\n",
     "\n",
     "# y = targets\n",
     "y = Bitcoin[[\"volume\"]]\n",
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
        "0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "(2490620, 622656)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "DecisionTreeClassifier(max_depth=5)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -453,40 +453,40 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>9220.04</td>\n",
-       "      <td>9250.06</td>\n",
-       "      <td>9250.06</td>\n",
-       "      <td>9241.16</td>\n",
+       "      <td>61868.81</td>\n",
+       "      <td>61920</td>\n",
+       "      <td>61888.18</td>\n",
+       "      <td>61919.98</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       low     high     open    close\n",
-       "0  9220.04  9250.06  9250.06  9241.16"
+       "        low   high      open     close\n",
+       "0  61868.81  61920  61888.18  61919.98"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "leo = pd.DataFrame([[9220.04, 9250.06, 9250.06, 9241.16]], columns=X_train.columns)\n",
+    "leo = pd.DataFrame([[61868.81, 61920, 61888.18, 61919.98]], columns=X_train.columns)\n",
     "leo.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "2\n"
      ]
     }
    ],
