--- a/model.ipynb
+++ b/model.ipynb
@@ -519,6 +519,14 @@
     "Test Erkenntnisse:\n",
     "Nach meinen Algorithmus-Tests nach, sollten die Ergebnisse 4% Genauigkeit aufweisen. Dies ist nicht sehr viel, daher habe ich auch nicht viel erwartet. Die Test aber zeigten eine Genauigkeit von 100% auf, was umso besser ist. Die Ergebnisse sind dabei auf ganze Zahlen gerunden."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hinweis\n",
+    "Die Tests und alle Berechnungen wurden mit der Demo Tabelle durchgeführt. Die Originale Tabelle war zu gross und dauerte zu lange."
+   ]
   }
  ],
  "metadata": {
