--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -23,9 +23,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: scikit-learn in c:\\users\\silvan.stoeckli\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (1.0.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\silvan.stoeckli\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from scikit-learn) (3.1.0)\n",
+      "Requirement already satisfied: joblib>=0.11 in c:\\users\\silvan.stoeckli\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from scikit-learn) (1.1.0)Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "Requirement already satisfied: scipy>=1.1.0 in c:\\users\\silvan.stoeckli\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from scikit-learn) (1.8.0)\n",
+      "Requirement already satisfied: numpy>=1.14.6 in c:\\users\\silvan.stoeckli\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from scikit-learn) (1.22.3)\n",
+      "Naive Bayes 0.04\n",
+      "Erwartet: 61920, Berechnet: 61920\n",
+      "Erwartet: 61912.67, Berechnet: 61912\n",
+      "Erwartet: 61907.96, Berechnet: 61907\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install -U scikit-learn\n",
     "\n",
@@ -121,16 +138,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "303 28.63 16.5 0.9936186183981285 0.00046159631250597183 0.9936803702685392 2420.78\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "best_model.fit(X_train, y_train)\n",
-    "predictions1 = best_model.predict(X_test)\n",
+    "from sklearn.metrics import mean_absolute_error\n",
     "\n",
-    "print(classification_report(predictions1, y_test))"
+    "from sklearn.metrics import explained_variance_score\n",
+    "\n",
+    "from sklearn.metrics import mean_absolute_percentage_error\n",
+    "\n",
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "from sklearn.metrics import median_absolute_error\n",
+    "\n",
+    "from sklearn.metrics import max_error\n",
+    "\n",
+    "\n",
+    "print(max_error(predictions1, y_test), mean_absolute_error(predictions1, y_test), median_absolute_error(predictions1, y_test), \n",
+    "r2_score(predictions1, y_test), mean_absolute_percentage_error(predictions1, y_test), explained_variance_score(predictions1, y_test), \n",
+    "mean_squared_error(predictions1, y_test))"
    ]
   },
   {
@@ -142,9 +179,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\silvan.stoeckli\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\utils\\validation.py:993: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n",
+      "C:\\Users\\silvan.stoeckli\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.01\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\silvan.stoeckli\\OneDrive - BBBaden\\Desktop\\Informatik\\Lernstrategien\\Modul 259\\StöckliSilvan_LB_M259\\evaluation.ipynb Cell 7'\u001b[0m in \u001b[0;36m<cell line: 29>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/silvan.stoeckli/OneDrive%20-%20BBBaden/Desktop/Informatik/Lernstrategien/Modul%20259/St%C3%B6ckliSilvan_LB_M259/evaluation.ipynb#ch0000006?line=24'>25</a>\u001b[0m \u001b[39m1\u001b[39m \u001b[39m-\u001b[39m y_test\u001b[39m.\u001b[39mmean()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/silvan.stoeckli/OneDrive%20-%20BBBaden/Desktop/Informatik/Lernstrategien/Modul%20259/St%C3%B6ckliSilvan_LB_M259/evaluation.ipynb#ch0000006?line=26'>27</a>\u001b[0m \u001b[39m# calculate null accuracy in a single line of code\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/silvan.stoeckli/OneDrive%20-%20BBBaden/Desktop/Informatik/Lernstrategien/Modul%20259/St%C3%B6ckliSilvan_LB_M259/evaluation.ipynb#ch0000006?line=27'>28</a>\u001b[0m \u001b[39m# only for binary classification problems coded as 0/1\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/silvan.stoeckli/OneDrive%20-%20BBBaden/Desktop/Informatik/Lernstrategien/Modul%20259/St%C3%B6ckliSilvan_LB_M259/evaluation.ipynb#ch0000006?line=28'>29</a>\u001b[0m \u001b[39mmax\u001b[39;49m(y_test\u001b[39m.\u001b[39;49mmean(), \u001b[39m1\u001b[39;49m \u001b[39m-\u001b[39;49m y_test\u001b[39m.\u001b[39;49mmean())\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/silvan.stoeckli/OneDrive%20-%20BBBaden/Desktop/Informatik/Lernstrategien/Modul%20259/St%C3%B6ckliSilvan_LB_M259/evaluation.ipynb#ch0000006?line=30'>31</a>\u001b[0m \u001b[39m# calculate null accuracy (for multi-class classification problems)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/silvan.stoeckli/OneDrive%20-%20BBBaden/Desktop/Informatik/Lernstrategien/Modul%20259/St%C3%B6ckliSilvan_LB_M259/evaluation.ipynb#ch0000006?line=31'>32</a>\u001b[0m y_test\u001b[39m.\u001b[39mvalue_counts()\u001b[39m.\u001b[39mhead(\u001b[39m1\u001b[39m) \u001b[39m/\u001b[39m \u001b[39mlen\u001b[39m(y_test)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\generic.py:1535\u001b[0m, in \u001b[0;36mNDFrame.__nonzero__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   <a href='file:///c%3A/Users/silvan.stoeckli/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/generic.py?line=1532'>1533</a>\u001b[0m \u001b[39m@final\u001b[39m\n\u001b[0;32m   <a href='file:///c%3A/Users/silvan.stoeckli/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/generic.py?line=1533'>1534</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__nonzero__\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m-> <a href='file:///c%3A/Users/silvan.stoeckli/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/generic.py?line=1534'>1535</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m   <a href='file:///c%3A/Users/silvan.stoeckli/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/generic.py?line=1535'>1536</a>\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThe truth value of a \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mtype\u001b[39m(\u001b[39mself\u001b[39m)\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m is ambiguous. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   <a href='file:///c%3A/Users/silvan.stoeckli/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/generic.py?line=1536'>1537</a>\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mUse a.empty, a.bool(), a.item(), a.any() or a.all().\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   <a href='file:///c%3A/Users/silvan.stoeckli/AppData/Local/Programs/Python/Python310/lib/site-packages/pandas/core/generic.py?line=1537'>1538</a>\u001b[0m     )\n",
+      "\u001b[1;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
+     ]
+    }
+   ],
    "source": [
     "# train a logistic regression model on the training set\n",
     "from sklearn.linear_model import LogisticRegression\n",
